--- a/index.html
+++ b/index.html
@@ -83,7 +83,44 @@
         </section>
 
         <!-- : Products -->
-        <section class="products"></section>
+        <section class="products">
+            <div class="products__bg section">
+                <div class="products__container container grid">
+                    <div class="products__data">
+                        <a href="#about" class="products__button">
+                            Scroll Down<i class="ri-arrow-down-s-line"></i>
+                        </a>
+                        <p class="products__description">
+                            We strive to form deep partnerships with farmers from all over th world to create perspective together and form healthy working relationships built in trust and respect.
+                        </p>
+                    </div>
+                    <div class="products__content">
+                        <article class="products__card">
+                            <img src="./assets/img/product-coffee-1.png" alt="products imagen" class="products__img">
+                            <h3 class="products__name">Classic Coffee</h3>
+                            <span class="produts__price">$17.90</span>
+                        </article>
+
+                        <article class="products__card">
+                            <img src="./assets/img/product-coffee-2.png" alt="products imagen" class="products__img">
+                            <h3 class="products__name">Black Coffee</h3>
+                            <span class="produts__price">$24.90</span>
+                        </article>
+
+                        <article class="products__card">
+                            <img src="./assets/img/product-coffee-3.png" alt="product imagen" class="products__img">
+                            <h3 class="products__name">Strong Coffee</h3>
+                            <span class="produts__price">$32.90</span>
+                        </article>
+                        
+                    </div>
+
+                </div>
+            </div>
+
+
+        </section>
+
         <!-- : About -->
         <section class="about" id="about"></section>
 
